# site-dci

./: .gitignore  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
dci/: asgi.py  build.sh  db.sqlite3  requirements.txt  settings.py  urls.py  wsgi.py
dci/dci/: settings.py  urls.py  wsgi.py
dci/landing/: urls.py
landing/: admin.py  models.py  urls.py  views.py
landing/templates/: 404.html  detalhes_noticias.html  index_gab.html  noticias.html
landing/templates/components/: _bootstrap-carousels.html  cards-word.html  cards.html  navs.html  noticias.html
landing/templates/includes/: navigation.html  scripts.html
landing/templates/includes/components/: _bootstrap-carousels.html  _cards.html  _navs.html
landing/templates/layout/: base.html
landing/templates/pages/: 404.html  contact.html  contact_confirmation.html  detalhes_noticias.html  index.html  teste.html  todas_noticias.html
site-dci-django/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
