[tool.poetry]
name = "dci-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dci"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
